--- a/src/app/lab1/lab1.component.html
+++ b/src/app/lab1/lab1.component.html
@@ -1,1 +1,6 @@
-<div id="plot"></div>
+<div class="plot-container">
+	<div id="input-amplitude-plot"></div>
+	<div id="input-phase-plot"></div>
+	<div id="output-amplitude-plot"></div>
+	<div id="output-phase-plot"></div>
+</div>
