--- a/src/styles.less
+++ b/src/styles.less
@@ -10,3 +10,14 @@ body {
 .tab {
 	font-size: 25px;
 }
+
+.container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 30px;
+}
+
+.plot-container {
+	margin-bottom: 30px;
+}
